feat.0077: fixed Tests